one two and three revised

--- a/artikulua.tex
+++ b/artikulua.tex
@@ -120,29 +120,29 @@ IXA NLP Group, University of the Basque Country UPV/EHU\\
 \section{Introduction}\label{sec:introduction}
 
 
-In the last few years Twitter has become one of the most used social networks, creating new ways of consuming information but also of communicating and creating both leisure- and work-related relationships in a explicit manner but also implicitly, via the information we shared with our followers via retweets. Furthermore, nowadays Twitter has become a source of spontaneously generated textual data for many human languages, including less resource languages such as Basque. Thus this data is becoming more and more useful to do social and computational linguistic research \cite{nguyen2016computational,rosenthal2017semeval,baldwin2015shared} both to complement traditional methods of sociological research and to provide with massive amounts of textual data to apply modern techniques of Natural Language Processing (NLP) based on machine and deep learning, for tasks such as automatic analysis of opinions (Opinion Mining or Sentiment Analysis) \cite{rosenthal2017semeval,S16-1003}, Named Entity Recognition and Lexical Normalization \cite{baldwin2015shared}, fake news and rumour detection \cite{derczynski2017semeval}, among others.
+In the last few years Twitter has become one of the most used social networks, creating new ways of consuming information but also of communicating and creating both leisure- and work-related explicit relationships. Furthermore, such relationships may be formed implicitly via the information we shared with our followers via retweets. Nowadays Twitter has become a source of spontaneously generated textual data for many human languages, including less resource languages such as Basque. Thus, this data is becoming more and more useful to do social research \cite{nguyen2016computational,rosenthal2017semeval,baldwin2015shared} which may complement traditional methods traditionally used in sociology. Furthermore, Twitter allows to obtain massive amounts of textual data to apply modern techniques of Natural Language Processing (NLP) based on machine and deep learning, for tasks such as automatic analysis of opinions (Opinion Mining or Sentiment Analysis) \cite{rosenthal2017semeval,S16-1003}, Named Entity Recognition and Lexical Normalization \cite{baldwin2015shared}, fake news and rumour detection \cite{derczynski2017semeval}, among others.
 
-In this paper we present a multidisciplinary work that aims to contribute novel insights in social research by using and investigating techniques from Natural Language Processing based on the general background proposed by Bauman and his \emph{liquid society} \cite{bauman2013liquid}. Thus, the objective of this work is to provide a detailed social and demographic-based view of the most important topics and relationships that are formed between Basque Twitter users classified by life stage (young and adult). By ``Basque Twitter users'' we refer to those users that are geolocalized in the area of the Basque Country (cultural) and that write at least the 20\% of their tweets using the Basque language. This analysis will be entirely based on automatically collected tweets from Basque users.
+Taking the concept \emph{liquid society} \cite{bauman2013liquid} as a starting point, in this paper we present a multidisciplinary work that aims to contribute novel insights in social research by using and investigating techniques from Natural Language Processing. Thus, the objective of this work is to provide a detailed social and demographic-based view of the most important topics and relationships that are formed between Basque Twitter users classified by life stage (young and adult). By ``Basque Twitter users'' we refer to those users that are geolocalized in the area of the Basque Country (cultural) and that write at least the 20\% of their tweets using the Basque language. This analysis will be entirely based on the automatically collected tweets from Basque users.
 
-More specifically, the work presented in this paper will consist of the following main steps. First, we will identify the relevant Basque Twitter users. Second, a large corpus of tweets will be extracted using the identified users' timelines. Third, we will classify users in terms of life stage (adult/young) by classifying the writing style of the tweets in their timelines as \emph{formal} or \emph{informal}. This is due to the fact that we do not have metadata information about the users' age, which means that we have to somehow try to infer the life stage based on features about writing style. Five different classification methods will be investigated, including the use of machine learning techniques based on both feature-based and neural network architectures. We will use the classifier with the best results in order to label the large corpus of Basque tweets by their writing style thereby classifying their users in terms of \emph{young} or \emph{adult}. In the final step, this classification will be used to investigate the most relevant topics among users of Twitter writing in Basque as well as for researching the social relations that emerge between each user type (young or adult). The final result will be a comprehensive sociological picture (automatically obtained) of the most important aspects within the community of Basque users of Twitter.
+More specifically, the work presented in this paper will consist of the following main steps. First, we will identify the relevant Basque Twitter users. Second, a large corpus of tweets will be extracted using the identified users' timelines. Third, we will classify users in terms of life stage (adult/young) by classifying the writing style of the tweets in their timelines as \emph{formal} or \emph{informal}. This is due to the fact that we do not have metadata information about the users' age, which means that we have to somehow try to infer the life stage based on features about writing style. Five different classification methods will be investigated, including the use of machine learning techniques based on both feature-based and neural network architectures. We will use the classifier that obtains the best results in to label the large corpus of Basque tweets by their writing style thereby classifying their users in terms of \emph{young} or \emph{adult}. In the final step, this classification will be used to investigate the most relevant topics among users of Twitter writing in Basque as well as for researching the social relations that emerge between each user type (young or adult). The final result will be a comprehensive sociological picture (automatically obtained) of the most important aspects within the community of Basque users of Twitter.
 
-The main contributions of this work are the following. First, we collect and publish a corpus of 6M tweets written in Basque and a manually annotated gold-standard of 1000 tweets in terms of the writing style, namely, \emph{formal} or \emph{informal}. Both corpora are made available to facilitate both NLP and social research in Basque\footnote{\url{https://github.com/ixa-ehu/heldugazte-corpus}}, a less resource highly-inflected language. Second, we investigate the classification of Basque tweets as \emph{formal} or \emph{informal} using 5 different approaches including novel NLP techniques based on word embeddings, contextual character embeddings and neural networks. We believe that our work is the most comprehensive experimentation for the detection of users' age both in terms of number of users and NLP techniques used. Third, the models of the best system will be made publicly available to facilitate their use and reproducibility of results\footnote{\url{https://github.com/ixa-ehu/ixa-pipe-doc}}. An interesting insight from this part is the fact that, contrary to common views, the neural approach \cite{akbik2018contextual} obtains very competitive results despite being trained on a very small dataset. We believe that is due mostly to the combination of character-based contextual embeddings with static word embeddings. Fourth, we perform the largest investigation of social relationships in terms of age stages for Basque communities based on an automatically classified corpus of almost 8K users and 6M tweets. Finally, we believe that this work shows how to make it possible to do meaningful and large scale social and NLP research for less resource languages using texts from social media. In our view, this work is just the beginning.
+The main contributions of this work are the following. First, we collect and publish a corpus of 6M tweets written in Basque and a manually annotated gold-standard of 1000 tweets in terms of the writing style, namely, \emph{formal} or \emph{informal}. Both corpora are made available to facilitate both NLP and social research in Basque\footnote{\url{https://github.com/ixa-ehu/heldugazte-corpus}}, a less resource highly-inflected language. Second, we investigate the classification of Basque tweets as \emph{formal} or \emph{informal} using 5 different approaches including novel NLP techniques based on word embeddings, contextual character embeddings and neural networks. We believe that our work is the most comprehensive experimentation for the detection of users' age both in terms of number of users and NLP techniques used. An interesting insight from this part is the fact that, contrary to common views, the neural approach \cite{akbik2018contextual} obtains very competitive results despite being trained on a very small dataset. We believe that is due mostly to the combination of character-based contextual embeddings with static word embeddings. Third, the models of the best system will be made publicly available to facilitate their use and reproducibility of results\footnote{\url{https://github.com/ixa-ehu/ixa-pipe-doc}}. Fourth, we perform the largest investigation of social relationships in terms of age stages for Basque communities based on an automatically classified corpus of almost 8K users and 6M tweets. Finally, we believe that this work shows how to make it possible to do meaningful and large scale social and NLP research for less resource languages using texts from social media. For us, this work is just the beginning.
 
 \section{Related Work}\label{sec:background}
 
-Analyzing demographic characteristics in social media is receiving increasing attention in the area of Social Media Mining \cite{nguyen2016computational,morgan2017predicting}. The popularity of Twitter has in fact benefited such approaches as it is possible now to mine spontaneous contributions and opinions of users about any kind of topic in many languages, including less resource languages. At the same time, by taking into account the relations created between retweets will allow us to analyze and try to understand the type of relations and user communities that are being created within the social network. Both social and linguistic aspects are important for our work as we will try to perform social and demographic analysis via large scale linguistic processing on written texts extracted from a social network such as Twitter. The main techniques used here are those related to topic modelling, the study of social relationships and text processing or Natural Language Processing (NLP).
+Analyzing demographic characteristics in social media is receiving increasing attention in the area of Social Media Mining \cite{nguyen2016computational,morgan2017predicting}. The popularity of Twitter has in fact benefited such approaches as it is possible now to mine spontaneous contributions and opinions of users about any kind of topic in many languages, including less resource languages. At the same time, by taking into account the relations created between retweets allows us to analyze and try to understand the type of relations and user communities that are being created within the social network. Both social and linguistic aspects are important for our work as we will try to perform social and demographic analysis via large scale linguistic processing on written texts extracted from a social network such as Twitter. The main techniques used here are those related to topic modelling, the study of social relationships and text processing or Natural Language Processing (NLP).
 
 With respect to topic modelling, many different approaches have tried to extract common information contained in large amounts of tweets scattered through the network, such as topic extraction with respect to an event and their related tweets \cite{hu2012lda}, real-time classification of twitter trends \cite{zubiaga2015real} or to compare the content of Twitter with traditional news media \cite{zhao2011comparing}. Applying topic modelling to tweets, like for other tasks, requires some pre-processing to make the task appropriate for such short texts or documents \cite{hong2010empirical}.
 
-In relation to the study of the social relationships that are generated within the network, closer to use are those studies that have aimed to identify communities of users based on their retweets. Among these, one can find studies about political polarization \cite{conover2011political}, political affiliation detection \cite{pennacchiotti2011democrats} or even studies about identifying communities in movements for independence \cite{zubiaga2017stance}. In these studies, based on the retweets made by the user, it is shown that there identification of communities or groups is quite feasible. In our work we will use similar methodologies to the ones mentioned here with the objective of uncovering latent communities formed within Basque users of Twitter.
+In relation to the study of the social relationships that are generated within the network, closer to us are those studies that have aimed to identify communities of users based on their retweets. Among these, one can find studies about political polarization \cite{conover2011political}, political affiliation detection \cite{pennacchiotti2011democrats} or even studies about identifying communities in movements for independence \cite{zubiaga2017stance}. In these studies, based on the retweets made by the user, it is shown that the identification of communities or groups is quite feasible. In this paper we will use similar methodologies to the ones mentioned here with the objective of uncovering latent communities formed within Basque users of Twitter.
 
-The use of Twitter is very popular in the area of Natural Language Processing (NLP), where tweets are used for many tasks such as mining opinions about specific products or topics \cite{rosenthal2017semeval,villena2013tass}, analyzing stance detection and fake news \cite{S16-1003,zubiaga2017stance} or in more low level NLP tasks such as POS tagging \cite{ritter_named_2011}, Named Entity Recognition \cite{baldwin2015shared}, normalization \cite{alegria2015tweetnorm} and language identification \cite{zubiaga2016tweetlid}, among many others. Previous NLP work is relevant to us as we will work with tweets to perform text classification with the aim of labelling tweets according to their writing style (conventional-informal or formal), although we will be working on our specifically created gold dataset of Basque tweets. The results of this work will allow us to classify Twitter users by their life stage (young or adult) which in turn would allow us to analyze their demographic characteristics with respect to the most important topics and with respect to the type of social relations that get created.
+The use of Twitter is very popular in the area of Natural Language Processing (NLP), where tweets are used for many tasks such as mining opinions about specific products or topics \cite{rosenthal2017semeval,villena2013tass}, analyzing stance detection and fake news \cite{S16-1003,zubiaga2017stance} or in more low level NLP tasks such as POS tagging \cite{ritter_named_2011}, Named Entity Recognition \cite{baldwin2015shared}, normalization \cite{alegria2015tweetnorm} and language identification \cite{zubiaga2016tweetlid}, among many others. Previous NLP work is relevant to us as we will work with tweets to perform text classification with the aim of labelling tweets according to their writing style (conventional-informal or formal), although we will be working on our specifically created gold dataset of Basque tweets. The results of this work will allow us to classify Twitter users by their life stage (young or adult) which in turn would allow us to analyze their demographic characteristics with respect to the most important topics and with respect to the type of social relations that arise from the social interaction within Twitter.
 
 Of particular interest to us is the body of work performed with the objective of age or life stage detection for Twitter users. Table \ref{tab:arte ezaug} lists the most relevant work on this task. Most of them create their own datasets with manually annotated data to learn life stages or age ranges. As it can be seen the number of users varies from 300 to 3000. It is also important to mention that the best performing systems are those that use at most two  \cite{rao2010classifying,al2012homophily} or three \cite{nguyen2013old,morgan2017predicting} labels denoting the life stages of interest for the classification task.
 
 \begin{table}[H]
   \centering
-  \begin{tabular}{llcr}\hline
+  \begin{tabular}{lccc}\hline
     Reference & Corpus size \# users & \# labels & Language \\ \hline \hline
     Rao et al. (2010) & 1000 & 2 & en \\
     Al Zamal et al. (2012) & 400 & 2 & en \\
@@ -154,7 +154,7 @@ Of particular interest to us is the body of work performed with the objective of
   \label{tab:arte ezaug}
 \end{table}
 
-For the task of age detection, most of previous works use both the text and the metadata provided by the Twitter API, most importantly the age of each user in order to guide the supervised learning methods. Previous work is based on Logistic Regression \cite{nguyen2013old,morgan2017predicting} and Support Vector Machines \cite{rao2010classifying,al2012homophily,marquardt2014age}. Best results in this area obtained 86.32 word accuracy \cite{nguyen2013old} for three age or life stages, although others scored well below that, most of them ranging around 74-80 word accuracy. These comparatively lower scores makes it more difficult to perform meaningful social and demographic research using such automatic classifiers. Therefore, an important contribution of this work will be to strive in providing good performing and classifiers for Basque tweets but also with the aim of the models to be robust and general enough to be applicable for different text classification tasks across different languages.
+For the task of age detection, most of previous works use both the text and the metadata provided by the Twitter API, most importantly the age of each user in order to guide the supervised learning methods. Previous work is based on Logistic Regression \cite{nguyen2013old,morgan2017predicting} and Support Vector Machines \cite{rao2010classifying,al2012homophily,marquardt2014age}. Best results in this area have obtained around 86 word accuracy \cite{nguyen2013old} for three age or life stages, although others scored well below that, most of them ranging around 74-80 word accuracy. These comparatively lower scores make it more difficult to perform meaningful social and demographic research using such automatic classifiers. Therefore, an important contribution of this work will be to strive in providing good performing classifiers for Basque tweets but also with the aim of developing robust and general enough models to be applicable for different text classification tasks across different languages.
 
 
 % #########################################################
@@ -164,13 +164,13 @@ For the task of age detection, most of previous works use both the text and the 
 
 \section{Extracting a Large Corpus of Tweets from Basque Users}\label{sec:data-extraction}
 
-As we have already commented in the introduction, Twitter allows to obtain relatively large datasets to work with even for less resourced languages. Before starting to collect the data, we defined the community of users that will be the subject (or, in other words, the universe) of our study. In our case the choice was quite simple, namely, we wanted to use tweets from every Twitter user that publishes tweets in Basque. The task of identifying such users was facilitated thanks to UMAP, a platform that monitors every tweet written in Basque. More specifically, UMAP includes a list of users who publish at least 20\% of their tweets in Basque. We used such source to obtain a list of 8189 users.
+As we have already commented in the introduction, Twitter allows to obtain relatively large datasets also for less resourced languages. Before starting to collect the data for our work, we defined the community of users that will be the subject (or, in other words, the universe) of our study. In our case the choice was quite simple, namely, we wanted to use tweets from every Twitter user that publishes tweets in Basque. The task of identifying such users was facilitated thanks to UMAP, a platform that monitors every tweet written in Basque. More specifically, UMAP includes a list of users who publish at least 20\% of their tweets in Basque\footnote{\url{https://umap.eus/}}. We used such source to obtain an initial list of 8189 users.
 
-The Twitter API was used via the tweepy package, choosing the \textit{timeline extraction} mode to gather the last 3,200 available tweets of each of the 8189 users in our sample. The data collection was performed between May 30th and 31st of 2018, gathering, after some errors, more than 10 million (multilingual) tweets from 7980 users. We call this data the \emph{Large Corpus}. Next, we classify the tweets by language using the metadata provided by the Twitter API, identifying those that are written in Basque. The result is a dataset of around 6M tweets that we refer to as the \emph{Heldugazte Corpus}, which we split in personal tweets and retweets. The main statistics of the Heldugazte corpus are provided by Table \ref{tab:useful-data}\footnote{The corpus is publicly available at \url{https://github.com/ixa-ehu/heldugazte-corpus}.}.
+The Twitter API was used via the tweepy package, choosing the \textit{timeline extraction} mode to gather the last 3,200 available tweets of each of the 8189 users in our sample. The data collection was performed between May 30th and 31st of 2018, gathering, after discarding some users due to API errors, more than 10 million (multilingual) tweets from 7980 users. We call this data the \emph{Large Corpus}. Next, we classify the tweets by language using the metadata provided by the Twitter API, identifying those that are written in Basque. The result is a dataset of around 6M tweets that we refer to as the \emph{Heldugazte Corpus}, which we split in personal tweets and retweets. The main statistics of the Heldugazte corpus are provided by Table \ref{tab:useful-data}\footnote{The corpus is publicly available at \url{https://github.com/ixa-ehu/heldugazte-corpus}.}.
 
 \begin{table}[H]
   \centering
-  \begin{tabular}{lll} \hline
+  \begin{tabular}{lrr} \hline
      & Personal tweets in Basque & Retweets in Basque \\ \hline \hline
     Tweets & 3,171,785 & 2,891,136 \\
     Terms & 1,434,050 & 813,833 \\
